# aigitcommit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.gitea/workflows/: rust.yml
.github/workflows/: commitlint.yml  crates.yml  deploy_image.yml  ghcr.yml  release.yml  rust.yml
hooks/: prepare-commit-msg
src/: cache.rs  cli.rs  git.rs  lib.rs  main.rs  openai.rs  utils.rs
src/git/: message.rs  mod.rs  repository.rs
templates/: prompt.txt  system.txt  user.txt
