[package]
name = "aigitcommit"
version = "1.3.2"
edition = "2021"
description = "A simple git commit message generator by OpenAI compaction model."
license-file = "LICENSE"
readme = "README.md"
keywords = ["git", "openai", "tools"]
authors = ["mingcheng <mingcheng@apache.org"]
repository = "https://github.com/mingcheng/aigitcommit"
homepage = "https://github.com/mingcheng/aigitcommit"
exclude = ["assets/*", "hooks/*"]
categories = ["command-line-utilities", "development-tools::git-tools"]

[dependencies]
reqwest = { version = "0.12.12", features = [
    "json",
    "stream",
    "socks",
    "blocking",
    "multipart",
    "http2",
    "charset",
    "native-tls-vendored",
] }
askama = "0.12.1"
async-openai = "0.27"
git2 = "0.20"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
strum = "0.27.1"
strum_macros = "0.27.1"
dialoguer = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
arboard = "3.4"

[[bin]]
name = "aigitcommit"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
