[package]
name = "aigitcommit"
version = "1.6.1"
edition = "2024"
description = "A simple git commit message generator by OpenAI compaction model."
license-file = "LICENSE"
readme = "README.md"
keywords = ["git", "tools", "ai", "development"]
authors = ["mingcheng <mingcheng@apache.org>"]
repository = "https://github.com/mingcheng/aigitcommit"
homepage = "https://github.com/mingcheng/aigitcommit"
exclude = ["assets/*", "hooks/*"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "socks",
    "blocking",
    "multipart",
    "http2",
    "charset",
    "native-tls-vendored",
] }
askama = "0.14"
async-openai = "0.30"
git2 = "0.20"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
arboard = "3.6"
tabled = "0.20"
cliclack = "0.3.6"

[[bin]]
name = "aigitcommit"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false

[build-dependencies]
built = "0.8"
